deploy/argocd-applications/envoy-gateway-system/app-manifest.yaml
# apiVersion: argoproj.io/v1alpha1
# kind: Application
# metadata:
#   name: envoy-gateway-crds
#   namespace: argocd
# spec:
#   project: default
#   ignoreDifferences:
#     - group: argoproj.io
#       kind: Application
#       jsonPointers:
#         - /status
#   source:
#     helm:
#       valuesObject:
#         crds:
#           envoyGateway:
#             enabled: true
#           gatewayAPI:
#             channel: "stable"
#             enabled: true
#     chart: gateway-crds-helm
#     repoURL: docker.io/envoyproxy
#     targetRevision: v1.9.1
#   destination:
#     namespace: envoy-gateway-system
#     server: https://kubernetes.default.svc
#   syncPolicy:
#     syncOptions:
#     - CreateNamespace=true
#     - ServerSideApply=true
#     automated:
#       prune: true
#       selfHeal: true
# ---
# apiVersion: argoproj.io/v1alpha1
# kind: Application
# metadata:
#   name: envoy-gateway
#   namespace: argocd
# spec:
#   project: default
#   ignoreDifferences:
#     - group: argoproj.io
#       kind: Application
#       jsonPointers:
#         - /status
#   source:
#     chart: gateway-helm
#     repoURL: docker.io/envoyproxy
#     targetRevision: v1.9.1
#     helm:
#       valuesObject:
#         # Disable CRD installation since they are installed by envoy-gateway-crds
#         crds:
#           enabled: false
#   destination:
#     namespace: envoy-gateway-system
#     server: https://kubernetes.default.svc
#   syncPolicy:
#     syncOptions:
#     - CreateNamespace=true
#     - ServerSideApply=true
#     automated:
#       prune: true
#       selfHeal: true
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  namespace: envoy-gateway-system
spec:
  gatewayClassName: envoy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: envoy-gateway
  namespace: envoy-gateway-system
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - "gateway.localhost"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: envoy-gateway
          port: 19000
          namespace: envoy-gateway-system
